--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style type="text/css">
+      <!--
+        body {background-color: #f0f8ff;}
+       -->
+    </style>
   </head>
   <body>
     <div id="root"></div>
