--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,20 @@
         body {background-color: #f0f8ff;}
        -->
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-89RJ0E3EHB"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-89RJ0E3EHB");
+    </script>
   </head>
   <body>
     <div id="root"></div>
